test/runtime/fail/fn/lone_return.hy

// expect error: Cannot return from the top level of a package

{
	return
}
